# ExPO

./: .gitignore  FAIR_COMPLIANCE_REPORT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup_and_test.py  verify_fair_compliance.py
.github/workflows/: ci.yml
docs/: API.md  README.md
expo/: __init__.py  cli.py  config.py  constants.py
expo/analysis/: __init__.py  calibration_plots.py  embedding_analysis.py  embedding_plots.py  exposure_analysis.py  metrics_plots.py  plotting.py
expo/baselines/: __init__.py  wrappers.py
expo/calibration/: __init__.py  conformal.py  multioutput.py  quantile_calibration.py  reliability.py  temperature_scaling.py  utils.py
expo/data/: __init__.py  dataset.py  exposure_features.py  preprocessing.py  splits.py
expo/losses/: __init__.py  composite.py  quantile_loss.py  ranking.py  regression.py  regularization.py
expo/metrics/: __init__.py  classification_metrics.py  ranking_metrics.py  regression_metrics.py  stats.py  uncertainty_metrics.py
expo/models/: __init__.py  cell_encoder.py  chem_encoder.py  context.py  deeponet.py  expo_model.py  quantile.py
expo/reporting/: __init__.py  markdown.py  tables.py
expo/training/: __init__.py  callbacks.py  logging.py  optimizer.py  scheduler.py  trainer.py
expo/utils/: __init__.py  checkpoints.py  io.py  profiling.py  serialization.py  typing_utils.py
scripts/: eval_expo.py  generate_test_data.py  install_dependencies.py  make_figures.py  plot_training_curves.py  plot_uncertainty_curves.py  run_ablation.py  run_full_demo_pipeline.py  train_expo.py
tests/: __init__.py  test_expo.py
